# martian-sand

./: Cargo.toml  elements.json  rustfmt.toml
martian-sand-presentation/: martian-sand-presentation.ai
progress/: journal.md
src/: cell.rs  element.rs  interaction.rs  main.rs  world.rs
src/qtree/: mod.rs  node.rs  quad.rs  space.rs
src/util/: circle.rs  draw.rs  font.rs  mod.rs
