[package]
name = "martian-sand"
version = "0.1.0"
authors = ["Tom Gardiner <tom@tombofry.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.23.0"
winit_input_helper = "0.8.0"
rand = "0.7.3"
rayon = "1.5.0"

[profile.release]
lto = "fat"
panic = "abort"
