[package]
name = "martian-sand"
version = "0.1.0"
authors = ["Tom Gardiner <tom@tombofry.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
rand = "0.8.5"
rayon = "1.5.0"
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.60"
dotenv = "0.15.0"

# [profile.release]
# lto = "fat"
# panic = "abort"
